fixed work page, readded assets folder

--- a/work.html
+++ b/work.html
@@ -48,11 +48,6 @@
                 <h1 class="top-padding">Work.</h1>
                 <div class="w3-content w3-display-container">
                     <div class="w3-display-container mySlides">
-                        <img src="assets/thepaperweights.png" style="width:100%">
-                        <a href="https://www.thepaperweightsband.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">The Paperweights</div></a>
-                    </div>
-
-                    <div class="w3-display-container mySlides">
                         <img src="assets/cantstopcbus.png" style="width:100%">
                         <a href="https://cantstopcolumbus.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Can't Stop Columbus</div></a>
                     </div>
@@ -67,6 +62,11 @@
                         <a href="https://www.dinventuresllc.com/" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Din Ventures LLC</div></a>
                     </div>
 
+                    <!-- <div class="w3-display-container mySlides">
+                        <img src="assets/roughneckspodcast" style="width:100%">
+                        <a href="https://www.roughneckspodcast.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Roughnecks Podcast</div></a>
+                    </div> -->
+
                     <div class="w3-display-container mySlides">
                         <img src="assets/hillside port img.png" style="width:100%">
                         <a href="https://github.com/johnparrett/hillside" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Hillside LTD</div></a>
@@ -77,10 +77,10 @@
                         <a href="https://github.com/johnparrett/contractor" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Contractor Insurance</div></a>
                     </div>
 
-                    <div class="w3-display-container mySlides">
+                    <!-- <div class="w3-display-container mySlides">
                         <img src="assets/under construction.png" style="width:100%">
                         <a href="https://github.com/johnparrett/contractor" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">More Websites to Come!</div></a>
-                    </div>
+                    </div> -->
 
                     <div class="under-construction">
                         <a href="#" target=""><img class="build-img" src="" /></a>
