added 2 new sites to works page

--- a/work.html
+++ b/work.html
@@ -62,10 +62,15 @@
                         <a href="https://www.dinventuresllc.com/" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Din Ventures LLC</div></a>
                     </div>
 
-                    <!-- <div class="w3-display-container mySlides">
-                        <img src="assets/roughneckspodcast" style="width:100%">
+                    <div class="w3-display-container mySlides">
+                        <img src="assets/roughnecks.png" style="width:100%">
                         <a href="https://www.roughneckspodcast.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Roughnecks Podcast</div></a>
-                    </div> -->
+                    </div>
+
+                    <div class="w3-display-container mySlides">
+                        <img src="assets/tylerportner.png" style="width:100%">
+                        <a href="https://www.tylerportner.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Lawyer Contact Info</div></a>
+                    </div> 
 
                     <div class="w3-display-container mySlides">
                         <img src="assets/hillside port img.png" style="width:100%">
@@ -75,16 +80,6 @@
                     <div class="w3-display-container mySlides">
                         <img src="assets/contractor img.png" style="width:100%">
                         <a href="https://github.com/johnparrett/contractor" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Contractor Insurance</div></a>
-                    </div>
-
-                    <!-- <div class="w3-display-container mySlides">
-                        <img src="assets/under construction.png" style="width:100%">
-                        <a href="https://github.com/johnparrett/contractor" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">More Websites to Come!</div></a>
-                    </div> -->
-
-                    <div class="under-construction">
-                        <a href="#" target=""><img class="build-img" src="" /></a>
-                        <h4></h4>
                     </div>
 
                     <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
