cleaned up photo names

--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
                     </div>
 
                     <div class="w3-display-container mySlides">
-                        <img src="assets/evan blog img.png" style="width:100%">
+                        <img src="assets/evan-blog.png" style="width:100%">
                         <a href="https://www.dinventuresllc.com/" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Din Ventures LLC</div></a>
                     </div>
 
@@ -68,17 +68,17 @@
                     </div>
 
                     <div class="w3-display-container mySlides">
-                        <img src="assets/tylerportner.png" style="width:100%">
+                        <img src="assets/tyler-portner.png" style="width:100%">
                         <a href="https://www.tylerportner.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Lawyer Contact Info</div></a>
                     </div> 
 
                     <div class="w3-display-container mySlides">
-                        <img src="assets/hillside port img.png" style="width:100%">
+                        <img src="assets/hillside.png" style="width:100%">
                         <a href="https://github.com/johnparrett/hillside" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Hillside LTD</div></a>
                     </div>
 
                     <div class="w3-display-container mySlides">
-                        <img src="assets/contractor img.png" style="width:100%">
+                        <img src="assets/contractor.png" style="width:100%">
                         <a href="https://github.com/johnparrett/contractor" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Contractor Insurance</div></a>
                     </div>
 
