--- a/work.html
+++ b/work.html
@@ -48,7 +48,7 @@
                 <h1 class="top-padding">Work.</h1>
                 <div class="w3-content w3-display-container">
                     <div class="w3-display-container mySlides">
-                        <img src="assets/cantstopcbus.png" style="width:100%">
+                        <img src="assets/cantstopcolumbus.png" style="width:100%">
                         <a href="https://cantstopcolumbus.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Can't Stop Columbus</div></a>
                     </div>
                     
