--- a/work.html
+++ b/work.html
@@ -70,7 +70,12 @@
                     <div class="w3-display-container mySlides">
                         <img src="assets/tyler-portner.png" style="width:100%">
                         <a href="https://www.tylerportner.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Lawyer Contact Info</div></a>
-                    </div> 
+                    </div>
+                    
+                    <div class="w3-display-container mySlides">
+                        <img src="assets/band-site.png" style="width:100%">
+                        <a href="https://www.thepaperweightsband.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Band Website</div></a>
+                    </div>
 
                     <div class="w3-display-container mySlides">
                         <img src="assets/hillside.png" style="width:100%">
