edited about page

--- a/about.html
+++ b/about.html
@@ -47,14 +47,14 @@
             <div class="container">
                 <h1 class="top-padding">About.</h1>
                 <div class="about-info">
-                    <h3>I am continuously learning how to code. When using HTML, CSS and JavaScript to build expansive, multidimensional 
+                    <h3>I am continuously learning. When using HTML, CSS and JavaScript to build expansive, multidimensional 
                         websites, I must make sure I am constantly using the best and most efficient code.
                     </h3>
                     <h3>
-                        From small blogs to large-scale ecommerce wesites, I have designed, built,
-                        and deployed them all. Using a variety of tools; from npm and nodes.js to Wix and different CMS builders.
+                        From blogs to large-scale e-commerce websites, I have designed, built,
+                        and deployed them all. Using a variety of tools; from custom code, to Wix and other site builders.
                     </h3>
-                    <h3>Being a self-employed, freelance developer.  I am involved in every step of the process in building a website.  I find the clients. 
+                    <h3>Being freelance developer,  I am involved in every step of the process.  I find the clients.  
                         I build the website.  I educate the client. I deploy the website.
                     </h3>
                     <h3>Need a website?<br><a id="learn-link" href="contact.html">Contact me &gt;</a></h3>
