--- a/contact.html
+++ b/contact.html
@@ -45,24 +45,7 @@
         <main>
             <div class="container">
                 <h1 class="top-padding">Contact.</h1>
-                <div class="form-container">
-                    <form name="myForm" id="myForm" action="https://getform.io/f/dd78ece9-9460-4cb1-874b-451f36d57f0f" method="POST">
-                        <div class="form-element">
-                            <input class="form-field" type="text" name="name" placeholder="Name..." required>
-                        </div>
-                        <div class="form-element">
-                            <input class="form-field" type="email" name="email" placeholder="Email..." required>
-                        </div>
-                        <div class="form-element">
-                            <textarea class="form-field" name="message" id="message" cols="24" rows="5" placeholder="Message..." required></textarea>
-                        </div>
-                        <div class="contact-btn-container">
-                            <button class="inverse-contact-btn" type="submit">Send Message</button>
-                        </div>
-                                
-                    </form>
-                </div>
-            </div>
+                <h2 class="contact-email">Send an <a id="learn-link" href="mailto:johnparrett7@gmail.com">email</a> with details about your project or job.</h2>
             
         </main>
         <div class="footer">
