--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <body>
         <header id="header" class="flex-container">
             <div>
-                <img class="logo" src="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2020-10-02/f55c06b41ea225dcca61915f341153c8.ico.png" alt="JP" /></a>
+                <img class="logo" src="./assets/jp.png" alt="JP" />
             </div>
             <nav class="banner-menu">
                 <ul class="guide">
@@ -47,17 +47,25 @@
             <div class="container">
                 <h1 class="top-padding">About.</h1>
                 <div class="about-info">
-                    <h3>I am continuously learning. When using HTML, CSS and JavaScript to build expansive, multidimensional 
-                        websites, I must make sure I am constantly using the best and most efficient code.
+                    <h3>I am passionate about helping businesses and organizations build an online 
+                        presence that accurately represents their brand and engages with their audience.
                     </h3>
                     <h3>
-                        From blogs to large-scale e-commerce websites, I have designed, built,
-                        and deployed them all. Using a variety of tools; from custom code, to Wix and other site builders.
+                        I specialize in front-end development, utilizing my skills in HTML, CSS, and JavaScript to create visually appealing and functional websites that are easy to navigate. 
+                        I also have experience with back-end development, working with JavaScript, and other technologies to build custom web applications.
                     </h3>
-                    <h3>Being freelance developer,  I am involved in every step of the process.  I find the clients.  
-                        I build the website.  I educate the client. I deploy the website.
+                    <h3>My approach to web development is collaborative and client-focused. I work closely with my clients to understand their goals and objectives, and to create websites that meet their specific needs. 
+                        I believe in clear communication throughout the development process, and always strive to exceed my clients' expectations.
                     </h3>
-                    <h3>Need a website?<br><a id="learn-link" href="contact.html">Contact me &gt;</a></h3>
+                    <h3>
+                        In addition to my technical skills, I am committed to ongoing learning and professional development. 
+                        I am always seeking to improve my skills and stay up-to-date with the latest trends and technologies in web development.
+                    </h3>
+                    <h3>
+                        If you're looking for a web developer who is dedicated, creative, and easy to work with, 
+                        please don't hesitate to reach out to me! I would be honored to help bring your web development projects to life.
+                    </h3>
+                    <h3><a id="learn-link" href="contact.html">Contact me &gt;</a></h3>
                 </div>
             </div>
             
