--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <body>
         <header id="header" class="flex-container">
             <div>
-                <img class="logo" src="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2020-10-02/f55c06b41ea225dcca61915f341153c8.ico.png" alt="JP" /></a>
+                <img class="logo" src="./assets/jp.png" alt="JP" />            
             </div>
             <nav class="banner-menu">
                 <ul class="guide">
