--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
     <body>
         <header id="header" class="flex-container">
             <div>
-                <img class="logo" src="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2020-10-02/f55c06b41ea225dcca61915f341153c8.ico.png" alt="JP" /></a>
+                <img class="logo" src="./assets/jp.png" alt="JP" />            
             </div>
             <nav class="banner-menu">
                 <ul class="guide">
@@ -46,6 +46,10 @@
             <div class="container">
                 <h1 class="top-padding">Work.</h1>
                 <div class="w3-content w3-display-container">
+                    <div class="w3-display-container mySlides">
+                        <img src="assets/chase.png" style="width:100%">
+                        <a href="https://chase.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">JP Morgan Chase</div></a>
+                    </div>
                     <div class="w3-display-container mySlides">
                         <img src="assets/cantstopcolumbus.png" style="width:100%">
                         <a href="https://cantstopcolumbus.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Can't Stop Columbus</div></a>
