fixed footer display

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             </div>
             
         </main>
-        <div class="footer">
+        <div class="footer" id="about-footer">
             <ul class="footer-grid-container">
                 <li class="footer-info">&#169; John Parrett 2020 | Custom Build</li>
             </ul>
