--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <nav class="banner-menu">
                         <ul class="guide">
                             <a class="nav-btn" href="https://www.linkedin.com/in/john-parrett-779915a2/" target="_blank"><li><img class="social-img" src="https://img.icons8.com/android/25/000000/linkedin.png"/></li></a>
-                            <a class="nav-btn" href="/about.html"><li>About</li></a>
+                            <a class="nav-btn" href="about.html"><li>About</li></a>
                             <a class="nav-btn" href="work.html"><li>Work</li></a>
                             <a class="nav-btn" href="contact.html"><li>Contact</li></a>
                         </ul>
