--- a/work.html
+++ b/work.html
@@ -46,12 +46,12 @@
                     <a href="https://cantstopcolumbus.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Can't Stop Columbus</div></a>
                 </div>
                 <div class="w3-display-container mySlides">
-                        <img src="assets/cbusremembers.png" style="width:100%">
-                        <a href="https://cbusremembers.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Cbus Remembers</div></a>
+                    <img src="assets/cbusremembers.png" style="width:100%">
+                    <a href="https://cbusremembers.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Cbus Remembers</div></a>
                 </div>
                 <div class="w3-display-container mySlides">
-                    <img src="assets/evan-blog.png" style="width:100%">
-                    <a href="https://www.dinventuresllc.com/" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Din Ventures LLC</div></a>
+                    <img src="assets/RBperformance.png" style="width:100%">
+                    <a href="https://www.rbperformance.co/" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">RB Performance</div></a>
                 </div>
                 <div class="w3-display-container mySlides">
                     <img src="assets/roughnecks.png" style="width:100%">
@@ -64,6 +64,10 @@
                 <div class="w3-display-container mySlides">
                     <img src="assets/band-site.png" style="width:100%">
                     <a href="https://www.thepaperweightsband.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Band Website</div></a>
+                </div>
+                <div class="w3-display-container mySlides">
+                    <img src="assets/evan-blog.png" style="width:100%">
+                    <a href="https://www.dinventuresllc.com/" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Din Ventures LLC</div></a>
                 </div>
                 <div class="w3-display-container mySlides">
                     <img src="assets/hillside.png" style="width:100%">
