added cwc to work page

--- a/work.html
+++ b/work.html
@@ -41,6 +41,10 @@
                     <img src="assets/chase.png" style="width:100%">
                     <a href="https://chase.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">JP Morgan Chase</div></a>
                 </div>
+                <div class="w3-display-container mySlides">
+                    <img src="assets/cwc.png" style="width:100%">
+                    <a href="https://www.clintonvillewomansclub.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Clintonville Woman's Club</div></a>
+                </div>
                 <div class="w3-display-container mySlides" id="takenOnDeck">
                     <img src="assets/ecofriendlymerchant.png" style="width:100%">
                     <a href="https://ecofriendlymerchant.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">EcoFriendlyMerchant</div></a>
@@ -69,18 +73,6 @@
                     <img src="assets/band-site.png" style="width:100%">
                     <a href="https://www.thepaperweightsband.com" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Band Website</div></a>
                 </div>
-                <!-- <div class="w3-display-container mySlides">
-                    <img src="assets/evan-blog.png" style="width:100%">
-                    <a href="https://www.dinventuresllc.com/" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Din Ventures LLC</div></a>
-                </div>
-                <div class="w3-display-container mySlides">
-                    <img src="assets/hillside.png" style="width:100%">
-                    <a href="https://github.com/johnparrett/hillside" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Hillside LTD</div></a>
-                </div>
-                <div class="w3-display-container mySlides">
-                    <img src="assets/contractor.png" style="width:100%">
-                    <a href="https://github.com/johnparrett/contractor" target="_blank"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">Contractor Insurance</div></a>
-                </div> -->
 
                 <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
                 <button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
